Issue98 JUNIT5, Spring Boot2, better example projects (boot1.5 & boot2.1) (#213)
* #98: switched to junit5
* minor bugfix: fixed trigger in test setup
* missing sync in InMem Store
* #98: junit5 filtering of integration tests, removed smoketests
* #98: added javax.annotation for future java compatibility with jdk11
* #98: added maven version output to circleci
* #98: updated surefire to 3
* #98: surefire/failsafe v3
* #98: closes #211
* #98: un-final fields used by JCommander
* #98: wip - consolidate spring deps, provide example projects for boot1.5 and 2.1
* #98: pg: actuator to autoconfigure + configuration-processor
* #98: boot: add configuration-processor proactively
* #98: example-server: adjust deps to external/user perspective
* added missing slf4j-simple for test scope
* #98: finalizing work on this branch, added properties for client examples

closes #208 
closes #209 
closes #98 
closes #139